--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
 	},
 	"dependencies": {
 		"core-js": "^3.6.5",
@@ -15,6 +16,8 @@
 		"vuex": "^3.4.0"
 	},
 	"devDependencies": {
+    "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/test-utils": "^1.1.4",
 		"@vue/cli-plugin-babel": "~4.5.0",
 		"@vue/cli-plugin-eslint": "~4.5.0",
 		"@vue/cli-plugin-router": "~4.5.0",
